* BUG#8822 Modify the getter of contract initial start date in order to get right date value after an endorsement

Version 2.0 - 2018-04-13
* FEA#2172 Add shortcut to Start Endorsement in toolbar on contracts
* BUG#8280 Prevent from applying an endorsement on an inactive contract
* BUG#8164 Fix display of migrated fields in endorsement summary
* BUG#8200 Ability to reactivate void contract by using reactivate contract endorsement
* BUG#8041 Replace the contract start_date by the initial_start_date on the check method which is applied before launching endorsement modification
* BUG#8144 Fix termination in current term with past periods
* BUG#8147 Allow termination on suspended contracts
* FEA#7655 Create one endorsement per contract in terminate, void, reactivate
* FEA#7629 Add signature date on endorsements
* BUG#7600 Fix problem related to the endorsement of contract termination made in the future
* FEA#7547 Add endorsement related data to rule engine
* FEA#7548 The creation of an endorsement can now be forbidden by a business rule
* BUG#2067 Add a friendly user error when it is not possible to cancel an endorsement

Version 1.14 - 2017-11-09
* BUG#385 Block the ability to delete an endorsement if it has been applied
* BUG#6003 Override contract option version if its effective date is the same as the previous contract option version
* FEA#7077 Add preconfigured endorsement definitions
* BUG#7120 Remove sub status initialization in coverage modification endorsement
* BUG#7114 Clean up endorsement contents
* BUG#6993 Removing simple json import
* BUG#6998 Add an error message on the endorsement preview if no preview state is defined on the definition
* BUG#6996 The effective date of reactivate endorsement is no more set by defaut to the contract end date if the contract is hold
* BUG#6867 Add an error message on endorsement when the contract status is incompatible with endorsements.
* BUG#6837 Add a method that checks the contract status.